# DeepDesk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SETUP.md  TRADEMARK.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  release.yml
assets/brand/: README.md
docs/: ARCHITECTURE.md  LICENSE-STRATEGY.md  PRD.md  UI-SKILL.md
docs/decisions/: 0001-m01-test-plan.md  0001-m01-webview-architecture.md  0002-shadcn-component-baseline.md  0002-shadcn-review.md  0003-inject-architecture.md  0003-inject-review.md  0003-inject-test-plan.md
docs/research/: 01-tech-stack.md  02-competitors.md  03-enhancements.md  04-gaps.md  05-feature-ideas.md  06-ui-trends.md
scripts/: build-inject.ts  inspect-dom.mjs  inspect-fetch-survival.mjs  inspect-net-channel.mjs  inspect-send.mjs  inspect-thinking.mjs  inspect-xhr-sse.mjs  install-logo.js  probe-live.mjs  shot-chips.mjs
src/: App.tsx  main.tsx
src-injected/: index.ts
src-injected/core/: bridge.ts  endpoints.ts  observer.ts  runtime.ts  selectors.ts  shadow-host.ts
src-injected/enhancers/: auto-retry.ts  debug-indicator.ts  immersive.ts  intent-chips.ts  mermaid.ts  probe.ts  slash-menu.ts  thinking.ts
src-injected/interceptors/: fetch.ts  sse.ts  xhr.ts
src-injected/types/: deepseek.ts  feature.ts  messages.ts
src-injected/utils/: debounce.ts  feature-flag.ts  logger.ts  safe-call.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: account.rs  commands.rs  db.rs  error_page.rs  injector.rs  lib.rs  main.rs  shortcuts.rs  tray.rs  windows.rs
src/components/: ComponentShowcase.tsx  TitleBar.tsx
src/components/ui/: button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  scroll-area.tsx  sheet.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/lib/: motion.ts  utils.ts
src/stores/: theme.ts
src/styles/: animations.css  global.css  tokens.css
