[package]
name = "deepdesk"
version = "0.1.0"
description = "Unofficial desktop client for chat.deepseek.com"
authors = ["Ylsssq926 and DeepDesk Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/Ylsssq926/DeepDesk"
edition = "2021"
rust-version = "1.78"

[lib]
name = "deepdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DB / FTS5
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"

[target."cfg(target_os = \"windows\")".dependencies]
window-vibrancy = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
