[package]
name = "deepdesk"
version = "0.1.0"
description = "Unofficial desktop client for chat.deepseek.com"
authors = ["Ylsssq926 and DeepDesk Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/Ylsssq926/DeepDesk"
edition = "2021"
rust-version = "1.78"

[lib]
name = "deepdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# build.rs 在编译期把 ../assets/brand/logo.svg 渲染成全套真实 RGBA 图标
# (PNG / ICO / ICNS)，覆写 src-tauri/icons/* —— 让 dock / 任务栏 / 托盘 /
# 安装包都显示真实的 DeepDesk logo。如果渲染过程任意一步失败，build.rs
# 会退化为 1x1 透明 RGBA 占位文件，确保 CI 永不 panic。
#
# 选用 resvg 0.45.x 是因为：
#   - 0.46 把 MSRV 提到 1.87，与本仓库 rust-version = 1.78 不兼容
#   - 0.45 的 tiny-skia 版本是 0.11，对应锁定即可
resvg = { version = "0.45", default-features = false }
tiny-skia = "0.11"
png = "0.17"
ico = "0.4"
icns = "0.3"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DB / FTS5
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1"
# 错误兜底页面（error_page.rs）需要把内嵌 HTML 编码成 `data:` URL。
base64 = "0.22"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"

[target."cfg(target_os = \"windows\")".dependencies]
window-vibrancy = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
